--- a/package.json
+++ b/package.json
@@ -1,28 +1,53 @@
 {
-  "name": "curves",
-  "version": "0.0.0",
+  "name": "vml-frontend-skeleton",
+  "version": "1.1.2",
   "description": "",
   "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "https://git.pride.gl/vml/vml-frontend-skeleton.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://bartoszkrawczyk@bitbucket.org/bartoszkrawczyk/curves.git"
-  },
-  "author": "Bartosz Krawczyk",
-  "license": "MIT",
-  "homepage": "https://bitbucket.org/bartoszkrawczyk/curves#readme",
+  "author": "VML PL Developers <pl.developers@vml.com>",
   "devDependencies": {
-    "gulp": "*",
-    "gulp-autoprefixer": "*",
-    "gulp-minify-css": "*",
-    "gulp-sass": "*",
-    "gulp-sourcemaps": "*",
-    "gulp-uglify": "*",
-    "gulp-util": "*",
-    "gulp-connect": "*",
-    "gulp-react": "*",
-    "bower": "*"
-  }
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babelify": "^6.4.0",
+    "browser-sync": "^2.11.2",
+    "browserify": "^12.0.1",
+    "browsernizr": "^2.1.0",
+    "classlist.js": "^1.1.20150312",
+    "classnames": "^2.2.5",
+    "core-decorators": "^0.12.3",
+    "cubic-spline": "^1.0.4",
+    "filesaver.js": "^0.2.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-clean-css": "^2.0.4",
+    "gulp-connect-php": "0.0.7",
+    "gulp-css-url-adjuster": "~0.2.3",
+    "gulp-file-include": "^0.13.7",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-jsdoc3": "^0.2.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "imagemin-pngquant": "^4.2.2",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "require-dir": "^0.3.0",
+    "rimraf": "^2.5.2",
+    "run-sequence": "^1.1.5",
+    "scssify": "^1.2.0",
+    "vinyl-buffer": "*",
+    "vinyl-source-stream": "*"
+  },
+  "dependencies": {}
 }
